Responsividade usando Grid

--- a/ativ03/index.html
+++ b/ativ03/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="tab2.css" />
+    <link rel="stylesheet" type="text/css" href="tab3.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
 
@@ -14,46 +14,47 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid ">
         <div class="row">
 
-            <div class="col-sm-2 col-lg-2 col-md-2 col-md-2">
+            <div class="col-sm-3 col-lg-3 col-md-3 col-md-3 border">
                 <div id="navegacao">
                     <ul id="navegacao">
-                        <li> <img src="./tiziu.png" alt="">
+                        <li class="p-3 d-flex justify-content-center align-self-left">
+                            <img src="./tiziu.png" alt="">
                         </li>
                         <li class="navegacaof row d-flex justify-content-center align-self-center">
-                            <i class="bi bi-house-door p-1 d-flex col-4 justify-content-center justify-content-
+                            <i class="bi bi-house-door p-1 d-flex col-5 justify-content-center justify-content-
                             md-center justify-content-lg-end align-self-center"></i>
                             <a href="#" class="d-none d-sm-none d-md-none d-lg-block d-xl-block p-1 col">Home</a>
                         </li>
 
                         <li class="navegacaof row d-flex justify-content-center align-self-center">
-                            <i class="bi bi-hash p-1 d-flex col-4 justify-content-center justify-content-
+                            <i class="bi bi-hash p-1 d-flex col-5 justify-content-center justify-content-
                             md-center justify-content-lg-end align-self-center"></i>
                             <a href="#" class="d-none d-sm-none d-md-none d-lg-block d-xl-block p-1 col">Explore</a>
                         </li>
 
                         <li class="navegacaof row d-flex justify-content-center align-self-center">
-                            <i class="bi bi-bell p-1 d-flex col-4 justify-content-center justify-content-
+                            <i class="bi bi-bell p-1 d-flex col-5 justify-content-center justify-content-
                             md-center justify-content-lg-end align-self-center"></i>
                             <a href="#" class="d-none d-sm-none d-md-none d-lg-block d-xl-block p-1 col">Notifications</a>
                         </li>
 
                         <li class="navegacaof row d-flex justify-content-center align-self-center">
-                            <i class="bi bi-envelope p-1 d-flex col-4 justify-content-center justify-content
+                            <i class="bi bi-envelope p-1 d-flex col-5 justify-content-center justify-content
                             -md-center justify-content-lg-end align-self-center"></i>
                             <a href="#" class="d-none d-sm-none d-md-none d-lg-block d-xl-block p-1 col">Messages</a>
                         </li>
 
                         <li class="navegacaof row d-flex justify-content-center align-self-center">
-                            <i class="bi bi-person-fill p-1 d-flex col-4 justify-content-center justify-content-
+                            <i class="bi bi-person-fill p-1 d-flex col-5 justify-content-center justify-content-
                             md-center justify-content-lg-end align-self-center"></i>
                             <a href="#" class="d-none d-sm-none d-md-none d-lg-block d-xl-block p-1 col">Profile</a>
                         </li>
 
                         <li class="navegacaof row d-flex justify-content-center align-self-center">
-                            <i class="bi bi-three-dots p-1 d-flex col-4 justify-content-center justify-content-
+                            <i class="bi bi-three-dots p-1 d-flex col-5 justify-content-center justify-content-
                             md-center justify-content-lg-end align-self-center"></i>
                             <a href="#" class="d-none d-sm-none d-md-none d-lg-block d-xl-block p-1 col">More</a>
                         </li>
@@ -61,7 +62,7 @@
                         <li class="row-4 d-flex justify-content-center align-self-center">
                             <button class=" w-auto btn-custon d-block d-sm-block d-md-block d-lg-block d-xl-block btn-primary justify-content-center align-self-center">
                     
-                                <i class="bi bi-pencil-square p-1 d-flex justify-content-center d-block d-sm-block
+                                <i class="bi bi-send-plus p-1 d-flex justify-content-center d-block d-sm-block
                                 d-md-block d-lg-none d-xl-none align-self-center btn-custon"></i>
 
                                 <p class="d-none d-sm-none d-md-none d-lg-block d-xl-block">Tweet</p>
@@ -71,12 +72,12 @@
                 </div>
             </div>
 
-            <div class="col-sm-10 col-md-7 col-lg-7 col-xl-7">
-                <div class="row" style="height: 150px">
-                    <div id="image" class="col-xl-4 col-sm-4 col-md-4 col-lg-4 h-100" style="background-color: black">
+            <div class="col-sm-8 col-md-6 col-lg-6 col-xl-6 border">
+                <div class="row">
+                    <div id="image" class="col-xl-4 col-sm-4 col-md-4 col-lg-4">
                         <img src="./LávemoPablo (1).jpg " class="rounded-circle" height="150" width="150">
                     </div>
-                    <div class="col-xl-4 col-md-4 vol-sm- d-flex justify-content-end aling-self-end">
+                    <div class="col-xl col-md col-sm d-flex justify-content-end aling-self-end">
                         <button class="w-auto p-0 btn-custon d-block col-3 d-sm-block d-md-block
                             d-lg-block d-xl-block btn-primary justify-content-end align-self-sm-end"> 
                             <p class="d-block d-sm-block  d-md-block d-lg-block d-xl-block">Editar Perfil</p>
@@ -84,137 +85,154 @@
                     </div>
                 </div>
 
-
                 <h2 class="name ">Falcão</h2>
-                <h3 class="nickName ">@Dumbof14</h3>
+                <h6 class="nickName ">@Dumbof14</h6>
 
                 <p id="descricao ">
                     Porque é assim que é, renascendo das cinzas. Firme e forte guerreiro de Fé;Racionais
                 </p>
 
 
-                <ul id="estatiticas ">
-                    <li class="estatiticasf ">
-                        <a href="# ">Terras do Nordeste</a>
-                        <li class="estatiticasf ">
-                            <a href="# ">Entrou em dzembro de 2018</a>
-                        </li>
+                <ul id="estatiticas">
+                    <li class="estatiticasf col-4 justify-content-left">
+                        <i class="bi bi-geo-alt"></i>
+                        <a href="#">Terras do Nordeste</a>
+                    </li>
+                    <li class="estatiticasf col-4 justify-content-left">
+                        <i class="bi bi-balloon"></i>
+                        <a href="#">Nascido em 5 de agosto de 2002</a>
+                    </li>
                 </ul>
 
-                <ul id="estatiticas ">
-                    <li class="estatiticasf ">
-                        <a href="# ">
+                <ul id="estatiticas">
+                    <li class="estatiticasf">
+                        <a href="#">
                             <strong>924</strong> Seguindo
                         </a>
                     </li>
 
-                    <li class="estatiticasf ">
-                        <a href="# ">
+                    <li class="estatiticasf">
+                        <a href="#">
                             <strong>756</strong> Seguidores
                         </a>
                     </li>
 
                 </ul>
 
-                <ul id="estatiticas ">
-                    <li class="estatiticasf ">
-                        <a href="# ">27.444 Tweets</a>
+                <div class="d-flex justify-content-center align-self-center" id="estatiticas">
+                    <li class="col d-flex justify-content-center align-self-center estatiticasf barraDeAtividade ">
+                        <a href="# ">Tzeets</a>
                     </li>
-                    <li class="estatiticasf ">
-                        <a href="# ">1869 Fotos e vídeos</a>
+                    <li class="col d-flex justify-content-center align-self-center estatiticasf barraDeAtividade">
+                        <a href="# ">Tzeets&Replies</a>
                     </li>
-                    <li class="estatiticasf ">
-                        <a href="# ">28731 curtiram</a>
+                    <li class="col d-flex justify-content-center align-self-center estatiticasf barraDeAtividade">
+                        <a href="# ">Medias</a>
                     </li>
-                </ul>
-
-                <div class="onetweet ">
-                    <div class="tweet ">
-                        <div>
-                            <img src="./LávemoPablo (1).jpg " alt=" ">
+                    <li class="col d-flex justify-content-center align-self-center estatiticasf barraDeAtividade">
+                        <a href="# ">Links</a>
+                    </li>
+                </div>
+                <div class="row border">
+                    <div>
+                        <div class="tweet">
+                            <div>
+                                <img class="rounded-circle" src="./LávemoPablo (1).jpg ">
+                            </div>
+                            <h3 class="name ">Falcão</h3>
+                            <p class="nickName ">@Dumbof14</p>
+                            <p class="tweetData ">17/04/2022</p>
                         </div>
-                        <h3 class="name ">Falcão</h3>
-                        <p class="nickName ">@Dumbof14</p>
-                        <p class="tweetData ">17/04/2022</p>
-                    </div>
-                    <p class="tweetTexto ">Se o Real não ganhar essa champions eu sou uma kombi 4 portas</p>
+                        <p class="tweetTexto ">Se o Real não ganhar essa champions eu sou uma kombi 4 portas</p>
 
-                    <div id="acoes ">
-                        <li id="comentarios_share ">
-                            <a href="# ">1000 comentários</a>
-                        </li>
-                        <li id="retweet ">
-                            <a href="# ">700 retweets</a>
-                        </li>
-                        <li id="like ">
-                            <a href="# ">5300 likes</a>
-                        </li>
-                        <li id="comentarios_share ">
-                            <a href="# ">share</a>
-                        </li>
+                        <ul class="col-3 d-flex acoesf" id="acoes">
+                            <li class="col-2 d-flex justify-content-center align-self-center" id="comentarios_share">
+                                <i class="bi bi-chat col-2 d-flex justify-content-center align-self-center"></i>
+                                <a href="#">20</a>
+                            </li>
+                            <li class="col-2 d-flex justify-content-center align-self-center" id="retweet">
+                                <i class="bi bi-arrow-repeat col-2 d-flex justify-content-center align-self-center"></i>
+                                <a href="#">700</a>
+                            </li>
+                            <li class="col-2 d-flex justify-content-center align-self-center" id="like">
+                                <i class="bi bi-heart col-2 d-flex justify-content-center align-self-center"></i>
+                                <a href="#">700</a>
+                            </li>
+                            <li class="col-2 d-flex justify-content-center align-self-center" id="comentarios_share">
+                                <i class="bi bi-upload col-2 d-flex justify-content-center align-self-center"></i>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-
-
-                <div class="onetweet ">
-                    <div class="tweet ">
-                        <div>
-                            <img src="./spfctt2.jpg " alt=" ">
+                <div class="row border">
+                    <div>
+                        <div class="tweet">
+                            <div>
+                                <img class="rounded-circle" src="./LávemoPablo (1).jpg ">
+                            </div>
+                            <h3 class="name ">Falcão</h3>
+                            <p class="nickName ">@Dumbof14</p>
+                            <p class="tweetData ">17/04/2022</p>
                         </div>
-                        <h3 class="name ">São Paulo</h3>
-                        <p class="nickName ">@SaoPauloFC</p>
-                        <p class="tweetData ">16/04/2022</p>
-                    </div>
-                    <p class="tweetTexto ">Ôôôô Toca no Calleri que é gooolll!</p>
+                        <p class="tweetTexto ">Se o Real não ganhar essa champions eu sou uma kombi 4 portas</p>
 
-                    <div id="acoes ">
-                        <li id="comentarios_share ">
-                            <a href="# ">1000 comentários</a>
-                        </li>
-                        <li id="retweet ">
-                            <a href="# ">700 retweets</a>
-                        </li>
-                        <li id="like ">
-                            <a href="# ">5300 likes</a>
-                        </li>
-                        <li id="comentarios_share ">
-                            <a href="# ">share</a>
-                        </li>
+                        <ul class="col-3 d-flex acoesf" id="acoes">
+                            <li class="col-2 d-flex justify-content-center align-self-center" id="comentarios_share">
+                                <i class="bi bi-chat col-2 d-flex justify-content-center align-self-center"></i>
+                                <a href="#">20</a>
+                            </li>
+                            <li class="col-2 d-flex justify-content-center align-self-center" id="retweet">
+                                <i class="bi bi-arrow-repeat col-2 d-flex justify-content-center align-self-center"></i>
+                                <a href="#">700</a>
+                            </li>
+                            <li class="col-2 d-flex justify-content-center align-self-center" id="like">
+                                <i class="bi bi-heart col-2 d-flex justify-content-center align-self-center"></i>
+                                <a href="#">700</a>
+                            </li>
+                            <li class="col-2 d-flex justify-content-center align-self-center" id="comentarios_share">
+                                <i class="bi bi-upload col-2 d-flex justify-content-center align-self-center"></i>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-
-                <div class="onetweet ">
-                    <div class="tweet ">
-                        <div>
-                            <img src="./LávemoPablo (1).jpg " alt=" ">
-                        </div>
-                        <h3 class="name ">Falcão</h3>
-                        <p class="nickName ">@Dumbof14</p>
-                        <p class="tweetData ">15/04/2022</p>
-                    </div>
-                    <p class="tweetTexto ">Dia de feijoada no RU é o melhor dia da semana</p>
-
-                    <div id="acoes ">
-                        <li id="comentarios_share ">
-                            <a href="# ">1000 comentários</a>
-                        </li>
-                        <li id="retweet ">
-                            <a href="# ">700 retweets</a>
-                        </li>
-                        <li id="like ">
-                            <a href="# ">5300 likes</a>
-                        </li>
-                        <li id="comentarios_share ">
-                            <a href="# ">share</a>
-                        </li>
-                    </div>
-                </div>
-
             </div>
 
-            <div class="col-sm-10 col-md-3 col-xl-3 col-lg-3 ">
-                aba daba duuuu
+            <div class=" col-sm-10 col-md-3 col-xl-3 col-lg-3 border p-3">
+                <button class="col-12 btn-custon d-flex  btn-gray">
+                    <i class="bi bi-search p-3 btn-custon"></i>
+                    <p class="p-3">Tweet</p>
+                </button>
+                <br>
+
+                <div class="explorar col-12 d-flex ">
+                    <div class="p-3 row">
+                        <div class="p-1 col-12 d-flex justify-content-center align-self-center ">
+                            <h3 class="justify-content-center align-self-cente">Talvez você curta</h3>
+                        </div>
+                        <div class="p-1 col-4 d-flex justify-content-center align-self-center">
+                            <img class="rounded-circle" src="./LávemoPablo (1).jpg" alt="">
+                        </div>
+                        <div class="p-1 col-4 d-flex justify-content-center align-self-center">
+                            <a href="#">Falcão</a>
+                        </div>
+                        <div class="p-1 col-4 d-flex justify-content-center align-self-center">
+                            <button class="btn btn-primary">Seguir</button>
+                        </div>
+
+                        <div class="p-1 col-4  d-flex justify-content-center align-self-center">
+                            <img class="rounded-circle" src="./LávemoPablo (1).jpg">
+                        </div>
+                        <div class="p-1 col-4 d-flex justify-content-center align-self-center">
+                            <a href="#">Falcão</a>
+                        </div>
+                        <div class="p-1 col-4 d-flex justify-content-center align-self-center">
+                            <button class="btn btn-primary">Seguir</button>
+                        </div>
+                        <a class="p-2 col d-flex align-self-left" href="#">Mostrar Mais..</a>
+                    </div>
+                </div>
             </div>
+
 
 
         </div>
