--- a/ativ03/index.html
+++ b/ativ03/index.html
@@ -168,26 +168,26 @@
                     <div>
                         <div class="tweet">
                             <div>
-                                <img class="rounded-circle" src="./LávemoPablo (1).jpg ">
+                                <img class="rounded-circle" src="spfctt2.jpg">
                             </div>
-                            <h3 class="name ">Falcão</h3>
-                            <p class="nickName ">@Dumbof14</p>
-                            <p class="tweetData ">17/04/2022</p>
+                            <h3 class="name ">SãoPaulo</h3>
+                            <p class="nickName ">@spfc</p>
+                            <p class="tweetData ">13/04/2022</p>
                         </div>
-                        <p class="tweetTexto ">Se o Real não ganhar essa champions eu sou uma kombi 4 portas</p>
+                        <p class="tweetTexto ">Ôôôô Toca no Calleri que é gooolll!</p>
 
                         <ul class="col-3 d-flex acoesf" id="acoes">
                             <li class="col-2 d-flex justify-content-center align-self-center" id="comentarios_share">
                                 <i class="bi bi-chat col-2 d-flex justify-content-center align-self-center"></i>
-                                <a href="#">20</a>
+                                <a href="#">6000</a>
                             </li>
                             <li class="col-2 d-flex justify-content-center align-self-center" id="retweet">
                                 <i class="bi bi-arrow-repeat col-2 d-flex justify-content-center align-self-center"></i>
-                                <a href="#">700</a>
+                                <a href="#">500</a>
                             </li>
                             <li class="col-2 d-flex justify-content-center align-self-center" id="like">
                                 <i class="bi bi-heart col-2 d-flex justify-content-center align-self-center"></i>
-                                <a href="#">700</a>
+                                <a href="#">1500</a>
                             </li>
                             <li class="col-2 d-flex justify-content-center align-self-center" id="comentarios_share">
                                 <i class="bi bi-upload col-2 d-flex justify-content-center align-self-center"></i>
