--- a/ativ04/profile.html
+++ b/ativ04/profile.html
@@ -18,6 +18,55 @@
         <div class="row">
 
             <div class="col-sm-3 col-lg-3 col-md-3 col-md-3 border">
+                <div class="modal" id="modal" tabindex="-1">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Tzeet</h5>
+                                <button type="button" id="fechar" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div>
+                                    <textarea class="col-12 d-flex textarea" name="textarea" id="textarea" cols="100" rows="1" placeholder="O que você está pensando?"></textarea>
+                                    <div>
+                                        <a class="col-12 reply" style="text-decoration: none;">
+                                            <i class="bi bi-globe"></i> Everyone can reply</a>
+                                    </div>
+                                    <div class="d-flex flex-row justify-content-between border-top">
+                                        <ul class="d-flex flex-row">
+                                            <li class=" multimedia d-flex justify-content-center align-self-center p-2">
+                                                <i class="bi bi-image p-1"></i>
+                                            </li>
+                                            <li class="multimedia d-flex justify-content-center align-self-center p-2">
+                                                <i class="bi bi-filetype-doc p-1"></i>
+                                            </li>
+                                            <li class=" multimedia d-flex justify-content-center align-self-center p-2">
+                                                <i class="bi bi-emoji-smile p-1"></i>
+                                            </li>
+                                            <li class="multimedia d-flex justify-content-center align-self-center p-2">
+                                                <i class="bi bi-bar-chart p-1"></i>
+                                            </li>
+                                            <li class="multimedia d-flex justify-content-center align-self-center p-2">
+                                                <i class="bi bi-calendar-event p-1"></i>
+                                            </li>
+                                            <li class="multimedia d-flex justify-content-center align-self-center p-2">
+                                                <i class="bi  bi-geo-alt-fill p-1"></i>
+                                            </li>
+                                        </ul>
+                                        <div class="d-flex flex-row justify-content-between align-items-center">
+                                            <p id="contador">0</p>
+                                            <i class="bi bi-grip-vertical p-1"></i>
+                                            <div class="d-flex justify-content-center align-self-center p-2">
+                                                <i class="bi bi-plus-circle p-1"></i>
+                                            </div>
+                                            <button class="btn-custon p-2 btn-primary" id="buttonPost">Enviar</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div id="navegacao">
                     <ul id="navegacao">
                         <li class="p-3 d-flex justify-content-center align-self-left">
@@ -26,7 +75,7 @@
                         <li class="navegacaof row d-flex justify-content-center align-self-center">
                             <i class="bi bi-house-door p-1 d-flex col-5 justify-content-center justify-content-
                             md-center justify-content-lg-end align-self-center"></i>
-                            <a href="#" class="d-none d-sm-none d-md-none d-lg-block d-xl-block p-1 col">Home</a>
+                            <a href="./index.html" class="d-none d-sm-none d-md-none d-lg-block d-xl-block p-1 col">Home</a>
                         </li>
 
                         <li class="navegacaof row d-flex justify-content-center align-self-center">
@@ -60,7 +109,7 @@
                         </li>
 
                         <li class="row-4 d-flex justify-content-center align-self-center">
-                            <button class=" w-auto btn-custon d-block d-sm-block d-md-block d-lg-block d-xl-block btn-primary justify-content-center align-self-center">
+                            <button id="tzeet" data-bs-target="modal" class="w-auto btn-custon d-block d-sm-block d-md-block d-lg-block d-xl-block btn-primary justify-content-center align-self-center">
                     
                                 <i class="bi bi-send-plus p-1 d-flex justify-content-center d-block d-sm-block
                                 d-md-block d-lg-none d-xl-none align-self-center btn-custon"></i>
@@ -240,6 +289,8 @@
 
     <script type="text/javascript " src="./bootstrap-5.1.3-dist/js/bootstrap.bundle.js ">
     </script>
+    <script type="text/javascript" src="./scriptProfile.js"></script>
+
 </body>
 
 </html>
