--- a/ativ05/login.html
+++ b/ativ05/login.html
@@ -13,34 +13,43 @@
     <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.min.css">
 </head>
 
-<body>
-    <div class="container-fluid ">
-        <div class="wrapper fadeInDown">
-            <div class="row-cols-4" id="formContent">
-                <form>
-                    <div class="p-3">
-                        <input type="text" id="login" class="fadeIn second d-flex col-12 p-2" name="login" placeholder="login">
-                    </div>
-                    <div class="p-3"> <input type="text" id="password" class="fadeIn third d-flex col-12 p-2" name="login" placeholder="password">
-                    </div>
-                    <div class="p-3">
-                        <input type="submit" class="btn-custon btn-primary col-12 p-2" value="Log In">
-                    </div>
-                </form>
+<body style="background: gray">
+    <div class="container">
+        <div class="row centraliza">
+            <div class=" col-7 card shadow rounded-3">
+                <div class="card-body p-4 p-sm-5">
+                    <h1 class="card-title text-center mb-5 fw-light fs-5">Entre no tzeet agora mesmo</h1>
+                    <form class="was-validated">
+                        <div class="form-floating mb-3 ">
+                            <input type="email" class="form-control " id="email" placeholder="name@example.com" required>
+                            <label for="femail">Email: </label>
+                            <div class="invalid-feedback">
+                                Informe um email válido
+                            </div>
+                        </div>
+                        <div class="form-floating mb-3 ">
+                            <input type="password" class="form-control" id="password" placeholder="senha" minlength="6" required>
+                            <label for="senha">Senha: </label>
+                            <div class="invalid-feedback">
+                                A senha é obrigatória e deve conter no mínimo 6 caractéres
+                            </div>
+                        </div>
 
-                <!-- Remind Passowrd -->
-                <div id="formFooter">
-                    <a class="underlineHover" href="#">Forgot Password?</a>
+
+                        <div class="d-grid">
+                            <button type="submit" id="btn" class="w-auto p-2 btn-primary btn-custon" type="submit" required>Entrar</button>
+                            <div class="invalid-feedback">
+                                Preencha os campos anteriores
+                            </div>
+                            <span>Não tem conta ? <a href="./cadastrotz.html">Inscreva-se</a></span>
+                        </div>
+
+                    </form>
                 </div>
-
             </div>
         </div>
     </div>
-
-    <script type="text/javascript " src="./bootstrap-5.1.3-dist/js/bootstrap.bundle.js ">
-    </script>
-    <script type="text/javascript" src="./scriptProfile.js"></script>
-
+    <script src="./logintz.js"></script>
 </body>
 
 </html>
