--- a/ativ05/login.html
+++ b/ativ05/login.html
@@ -37,7 +37,7 @@
 
 
                         <div class="d-grid">
-                            <button type="submit" id="btn" class="w-auto p-2 btn-primary btn-custon" type="submit" required>Entrar</button>
+                            <button type="submit" id="btn" disabled class="w-auto p-2 btn-primary btn-custon" type="submit" required>Entrar</button>
                             <div class="invalid-feedback">
                                 Preencha os campos anteriores
                             </div>
